# pipelines-1

./: .env  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
example_pipeline/: pipeline.py
pipelines/: cli.py  core.py  load.py  tasks.py  utils.py
tests/: tasks_testing.py
